added responsive css

--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/images/favicon-32x32.png" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <title>Column Preview Card</title>
 </head>
@@ -16,6 +13,7 @@
 <body>
     <div class="card-wrapper">
         <div class="card-sedans">
+            <img src="/images/icon-sedans.svg">
             <h1>SEDANS</h1>
             <p>Choose a sedan for its<br>
                 affordability and excellent<br>
@@ -23,9 +21,10 @@
                 cruising in the city or an<br>
                 your next road trip.
             </p>
-            <button>Learn More</button>
+            <button class="sedans-button">Learn More</button>
         </div>
-        <div class="card-suvs">
+        <div class=" card-suvs">
+            <img src="images/icon-suvs.svg">
             <h1>SUVS</h1>
             <p>Take an SUV for its spacious<br>
                 interior, power, and<br>
@@ -33,9 +32,10 @@
                 next family vacation and<br>
                 off-road adventures.
             </p>
-            <button>Learn More</button>
+            <button class="suvs-button">Learn More</button>
         </div>
         <div class="card-luxury">
+            <img src="images/icon-luxury.svg">
             <h1>Luxury</h1>
             <p>Cruise in the best car brands<br>
                 without the bloated prices.<br>
@@ -43,7 +43,7 @@
                 of a luxury rental and arrive<br>
                 in style.
             </p>
-            <button>Learn More</button>
+            <button class="luxury-button">Learn More</button>
         </div>
     </div>
 </body>
