--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/images/favicon-32x32.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>Column Preview Card</title>
 </head>
@@ -13,7 +13,7 @@
 <body>
     <div class="card-wrapper">
         <div class="card-sedans">
-            <img src="/images/icon-sedans.svg">
+            <img src="images/icon-sedans.svg">
             <h1>SEDANS</h1>
             <p>Choose a sedan for its<br>
                 affordability and excellent<br>
